ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncModule_es6/input.ts.stderr
error: Expected =>, got M
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncModule_es6/input.ts:3:14
  |
3 | async module M {   
  |              ^

